--- a/package.json
+++ b/package.json
@@ -1,1 +1,39 @@
-{"name":"ingenium","version":"1.0.0","private":true,"description":"Ingenium","author":"Dhruvil Dave","keywords":["gatsby"],"scripts":{"develop":"gatsby develop","start":"gatsby develop","build":"gatsby build","serve":"gatsby serve","clean":"gatsby clean"},"dependencies":{"gatsby":"^2.31.1","gatsby-image":"^2.11.0","gatsby-plugin-google-analytics":"^2.11.0","gatsby-plugin-react-helmet":"^3.10.0","gatsby-plugin-sharp":"^2.14.1","gatsby-source-filesystem":"^2.11.0","gatsby-transformer-sharp":"^2.12.0","react":"^16.13.1","react-dom":"^16.13.1","react-helmet":"^6.1.0"}}
+{
+  "name": "ingenium",
+  "version": "1.0.0",
+  "private": true,
+  "description": "Ingenium",
+  "keywords": [
+    "gatsby"
+  ],
+  "scripts": {
+    "develop": "gatsby develop",
+    "start": "gatsby develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "format": "prettier --write \"**/*.{html,css,js,jsx,json,yaml}\""
+  },
+  "dependencies": {
+    "autoprefixer": "^10.2.4",
+    "gatsby": "^2.31.1",
+    "gatsby-image": "^2.11.0",
+    "gatsby-plugin-postcss": "^3.7.0",
+    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-sharp": "^2.14.1",
+    "gatsby-source-filesystem": "^2.11.0",
+    "gatsby-transformer-sharp": "^2.12.0",
+    "postcss": "^8.2.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
+    "tailwindcss": "^2.0.2"
+  },
+  "devDependencies": {
+    "prettier": "^2.2.1"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "jsxSingleQuote": true
+  }
+}
