--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "deploy": "npm run build && yarn gh-pages -d public",
     "format": "prettier --write \"**/*.{html,css,js,jsx,json,yaml}\""
   },
   "dependencies": {
@@ -32,6 +33,7 @@
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "prettier": "^2.2.1"
   },
   "prettier": {
