--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
