added bideo fullscreen on scroll (need fix), added polaroid frame for images

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
+    "react-in-viewport": "^1.0.0-alpha.16",
     "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
