--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-source-filesystem": "^2.11.0",
     "gatsby-transformer-sharp": "^2.12.0",
+    "gsap": "^3.6.0",
     "postcss": "^8.2.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
-    "react-in-viewport": "^1.0.0-alpha.16",
     "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
