--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-transformer-remark": "^2.16.1",
     "gatsby-transformer-sharp": "^2.12.0",
     "gsap": "^3.6.0",
+    "matter-js": "^0.18.0",
     "package.json": "^2.0.1",
     "postcss": "^8.2.6",
     "react": "^16.14.0",
